# DeepLux

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/agent/: AgentActor.cpp  AgentActor.h  AgentBridge.cpp  AgentBridge.h  AgentConnection.cpp  AgentConnection.h  AgentController.cpp  AgentController.h  AgentObserver.cpp  AgentObserver.h  GuiEvent.cpp  GuiEvent.h  ILLMClient.cpp  ILLMClient.h  OpenAILLMClient.cpp  OpenAILLMClient.h  ToolSchema.cpp  ToolSchema.h
src/core/agent/knowledge/: DEEPLUX.md
src/core/base/: ModuleBase.cpp  ModuleBase.h
src/core/common/: CLIHandler.cpp  CLIHandler.h  CancellationToken.cpp  CancellationToken.h  ConfigWidgetHelper.h  Enums.h  ExpressionEngine.cpp  ExpressionEngine.h  Logger.cpp  Logger.h  ShortcutManager.cpp  ShortcutManager.h  Types.h  UserManager.cpp  UserManager.h  VarModel.cpp  VarModel.h
src/core/communication/: CommunicationManager.cpp  CommunicationManager.h
src/core/config/: SystemConfig.cpp  SystemConfig.h
src/core/deeplux/: ControlFlowType.h
src/core/device/: CameraManager.cpp  CameraManager.h
src/core/display/: DisplayData.cpp  DisplayData.h  IDisplayPort.h
src/core/engine/: RunEngine.cpp  RunEngine.h
src/core/interface/: ICamera.h  ICameraPlugin.h  IModule.h  IMotion.h
src/core/manager/: ConfigManager.cpp  ConfigManager.h  GlobalVarManager.cpp  GlobalVarManager.h  PluginManager.cpp  PluginManager.h  ProjectManager.cpp  ProjectManager.h
src/core/model/: ImageData.cpp  ImageData.h  Project.cpp  Project.h
src/core/platform/: PathUtils.cpp  PathUtils.h  Platform.h
src/plugins/calibration/NPointCalibration/: CMakeLists.txt  NPointCalibrationPlugin.cpp  NPointCalibrationPlugin.h  metadata.json
src/plugins/camera/DirectShowCamera/: CMakeLists.txt  DirectShowCamera.cpp  DirectShowCamera.h  DirectShowCameraPlugin.cpp  DirectShowCameraPlugin.h  metadata.json
src/plugins/camera/HikvisionCamera/: CMakeLists.txt  HikvisionCamera.cpp  HikvisionCamera.h  HikvisionCameraPlugin.cpp  HikvisionCameraPlugin.h  metadata.json
src/plugins/camera/V4L2Camera/: CMakeLists.txt  V4L2Camera.cpp  V4L2Camera.h  V4L2CameraPlugin.cpp  V4L2CameraPlugin.h  metadata.json
src/plugins/communication/: CMakeLists.txt
src/plugins/communication/PLCCommunicatePlugin/: CMakeLists.txt  PLCCommunicatePlugin.cpp  PLCCommunicatePlugin.h  metadata.json
src/plugins/communication/PLCReadPlugin/: CMakeLists.txt  PLCReadPlugin.cpp  PLCReadPlugin.h  metadata.json
src/plugins/communication/PLCWritePlugin/: CMakeLists.txt  PLCWritePlugin.cpp  PLCWritePlugin.h  metadata.json
src/plugins/communication/SerialPort/: CMakeLists.txt  SerialPortPlugin.cpp  SerialPortPlugin.h  metadata.json
src/plugins/communication/TCPClient/: CMakeLists.txt  TCPClientPlugin.cpp  TCPClientPlugin.h  metadata.json
src/plugins/communication/TCPServer/: CMakeLists.txt  TCPServerPlugin.cpp  TCPServerPlugin.h  metadata.json
src/plugins/detection/: CMakeLists.txt
src/plugins/detection/ColorRecognition/: CMakeLists.txt  ColorRecognitionPlugin.cpp  ColorRecognitionPlugin.h  metadata.json
src/plugins/detection/FindCircle/: CMakeLists.txt  FindCirclePlugin.cpp  FindCirclePlugin.h  metadata.json
src/plugins/detection/JiErHanDefectsDet/: CMakeLists.txt  JiErHanDefectsDetPlugin.cpp  JiErHanDefectsDetPlugin.h  metadata.json
src/plugins/detection/Matching/: CMakeLists.txt  MatchingPlugin.cpp  MatchingPlugin.h  metadata.json
src/plugins/detection/MeasureLine/: CMakeLists.txt  MeasureLinePlugin.cpp  MeasureLinePlugin.h  metadata.json
src/plugins/detection/MeasureRect/: CMakeLists.txt  MeasureRectPlugin.cpp  MeasureRectPlugin.h  metadata.json
src/plugins/detection/QRCode/: CMakeLists.txt  QRCodePlugin.cpp  QRCodePlugin.h  metadata.json
src/plugins/geometry/: CMakeLists.txt
src/plugins/geometry/DistancePL/: CMakeLists.txt  DistancePLPlugin.cpp  DistancePLPlugin.h  metadata.json
src/plugins/geometry/DistancePP/: CMakeLists.txt  DistancePPPlugin.cpp  DistancePPPlugin.h  metadata.json
src/plugins/geometry/FitCircle/: CMakeLists.txt  (+3 more)
src/plugins/hymson3d/: CMakeLists.txt
src/plugins/image_processing/: CMakeLists.txt
src/plugins/logic/: CMakeLists.txt  IfModule.cpp  IfModule.h  LoopModule.cpp  LoopModule.h  ParallelModule.cpp  ParallelModule.h  StopLoopModule.cpp  StopLoopModule.h
src/plugins/system/: CMakeLists.txt
src/plugins/variable/: CMakeLists.txt  StrFormatModule.cpp  StrFormatModule.h  VarDefineModule.cpp  VarDefineModule.h  VarSetModule.cpp  VarSetModule.h
src/ui/: CMakeLists.txt
src/ui/bridge/: TerminalBridge.cpp  TerminalBridge.h
src/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  AgentSettingsDialog.cpp  AgentSettingsDialog.h  LoginDialog.cpp  LoginDialog.h  MessageDialog.cpp  MessageDialog.h  PluginTestDialog.cpp  PluginTestDialog.h
src/ui/display/: DisplayManager.cpp  DisplayManager.h  IViewportContent.cpp  IViewportContent.h  Viewport2DContent.cpp  Viewport2DContent.h
src/ui/process/: BashProcess.cpp  BashProcess.h  LinuxPtyImpl.cpp  PtyImpl.h  WindowsPtyImpl.cpp  WindowsPtyImpl.h
src/ui/resources/: icons.qrc
src/ui/terminal/: AnsiConstants.h  AnsiParser.cpp  AnsiParser.h  CMakeLists.txt  TerminalRenderer.cpp  TerminalRenderer.h  TerminalScreen.cpp  TerminalScreen.h
src/ui/viewmodels/: MainViewModel.cpp  MainViewModel.h
src/ui/views/: CameraSetView.cpp  CameraSetView.h  CommunicationSetView.cpp  CommunicationSetView.h  GlobalVarView.cpp  GlobalVarView.h  MainWindow.cpp  MainWindow.h  SplashScreen.cpp  SplashScreen.h  SystemParamView.cpp  SystemParamView.h
src/ui/widgets/: AgentActionLogWidget.cpp  AgentActionLogWidget.h  AgentChatPanel.cpp  AgentChatPanel.h  AgentMessageBubble.cpp  AgentMessageBubble.h  AgentToolPreviewCard.cpp  AgentToolPreviewCard.h  ConfigWidgetFactory.cpp  ConfigWidgetFactory.h  FlowCanvas.cpp  FlowCanvas.h  HImageWidget.cpp  HImageWidget.h  PropertyPanel.cpp  PropertyPanel.h  TerminalWidget.cpp  TerminalWidget.h  ToolBox.cpp  ToolBox.h  ViewportWidget.cpp  ViewportWidget.h
tests/: CMakeLists.txt  TEST_REPORT.md
(+184 files in other folders)
