# Communication plugins

# SerialPort Plugin
add_subdirectory(SerialPort)

# TCPClient Plugin
add_subdirectory(TCPClient)

# TCPServer Plugin
add_subdirectory(TCPServer)

# PLC Modbus TCP Plugins
add_subdirectory(PLCReadPlugin)
add_subdirectory(PLCWritePlugin)
add_subdirectory(PLCCommunicatePlugin)
