# Logic plugins

# Delay Plugin
add_subdirectory(Delay)

# Condition Plugin
add_subdirectory(Condition)

# Loop Plugin
add_subdirectory(Loop)

# If Plugin
add_subdirectory(If)

# While Plugin
add_subdirectory(While)

# Parallel Plugin
add_subdirectory(Parallel)

# StopWhile Plugin
add_subdirectory(StopWhile)

# QueueIn Plugin
add_subdirectory(QueueIn)

# QueueOut Plugin
add_subdirectory(QueueOut)
