# Variable plugins

# CreateString Plugin
add_subdirectory(CreateString)

# SplitString Plugin
add_subdirectory(SplitString)

# Math Plugin
add_subdirectory(MathPlugin)

# VarDefine Plugin
add_subdirectory(VarDefinePlugin)

# VarSet Plugin
add_subdirectory(VarSetPlugin)

# StrFormat Plugin
add_subdirectory(StrFormatPlugin)
